2001-10-01  Raph Levien  <raph@acm.org>

	* art_svp_intersect.c:
	* art_svp_intersect.h:
	* Makefile.am:
	* art_misc.h:
	* art_svp_wind.h: First commit of new intersector code. It is
	  turned off by default, but can be enabled by #defining
	  ART_USE_NEW_INTERSECTOR in art_misc.h.

	* art_svp_ops.c: Make svp ops use new intersector if enabled.

	* art_svp_vpath_stroke.c: Make vpath stroking use new intersector
	if enabled.
	
	* testart.c: New test case for intersector.

Wed Sep 26 03:48:13 2001  George Lebl <jirka@5z.com>

	* Release 2.3.6

Wed Sep 26 03:11:40 2001  George Lebl <jirka@5z.com>

	* gen_art_config.c: Fix 64bit issues, cast sizeof return when
	  using %d to print it.

2001-09-13  Havoc Pennington  <hp@redhat.com>

	* Makefile.am: rename library to libart_lgpl_2

	* libart-2.0.pc.in (Cflags): move includes

	* libart-config.in: move includes

	* Makefile.am: delete libartConf.sh, rename libart-config
	(EXTRA_DIST): don't install m4 files
	(libart_lgplincdir): move headers

2001-08-03  Michael Meeks  <michael@ximian.com>

	* Version 2.3.5 for the API freeze.

2001-07-12  Darin Adler  <darin@bentspoon.com>

	* art_affine.c: (art_affine_expansion): Fix handling of
	negative numbers. We ran into this bug a while back when
	figuring out why librsvg couldn't handle certain svg files.

2001-07-12  Darin Adler  <darin@bentspoon.com>

	* art_misc.h: Change art_expand macro so it's a single
	statement, using the do while (0) trick, which gets rid
	of some warnings.
	* art_pixbuf.c: Add a missing include.
	* art_vpath_svp.c: (art_vpath_from_svp): Initialize a
	variable to avoid a compiler warning.
	* gen_art_config.c: Add a missing include.

2001-03-24  Martin Baulig  <baulig@suse.de>

	Applied the patch from Alexander Larsson which was sitting
	in gnome-libs/patches/libart.diff since February.
	[FIXME: Alex, can you please provide a ChangeLog?])

	* art_rgb_a_affine.[ch]: New files.

2001-01-07  Hans Breuer <Hans@Breuer.Org>